--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -1,6 +1,26 @@
+@import "../styles/main.scss";
+
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  width: 100vw;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+  background-color: $codespace-dark;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+
+  .wrapper {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+
+    .secondWrapper {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+    }
+  }
 }
