--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,7 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
 @import "./main.scss";
 
-:root {
+* {
+  margin: 0;
+  padding: 0;
   font-family: "Roboto", "Inter", sans-serif;
-  background-color: $codespace-dark;
+  outline: none;
+}
+
+button {
+  cursor: pointer;
 }
