--- a/src/components/Codespace/Codespace.scss
+++ b/src/components/Codespace/Codespace.scss
@@ -1,14 +1,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Readex+Pro:wght@160..700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
+@import '../../../SimpleLang/syntax/syntax.scss';
 
 .codespace {
     width: 100%;
     height: 100%;
-    max-height: 90vh;
+    // max-height: 66.65vh;
     padding: 1.44vh 0 0 1vw;
     display: flex;
     flex-direction: row;
     overflow-y: auto;
+    overflow-x: hidden;
+
+    .file_space {
+        width: 85vw;
+        height: 80vh;
+        opacity: 0;
+        position: absolute;
+    }
 
     .line-numbers {
         font-family: "Roboto", "Inter", sans-serif;
@@ -17,26 +26,31 @@
         flex-direction: column;
         align-items: flex-end;
         margin-right: 1vw;
-        font-size: 1.04vw;
+        // font-size: 1.04vw;
         font-weight: 300;
         color: #AFAFAF;
-        line-height: 1.6;
+        // line-height: 1.6;
 
         span {
             display: block;
-            height: 1.6em;
+            // height: 1.6em;
         }
     }
 
     .textarea {
-        font-family: "Readex Pro", sans-serif;
+        font-family: "Consolas", "Readex Pro", sans-serif;
         width: 85vw;
         resize: none;
         background-color: transparent;
         border: none;
         color: white;
-        font-size: 1.04vw;
+        // font-size: 1.04vw;
         font-weight: 400;
-        line-height: 1.6;
+        // line-height: 1.6;
+        // overflow-x: auto;
+
+        .keyword {
+            color: $keyword;
+        }
     }
 }
