--- a/src/components/OpenedFiles/OpenedFiles.scss
+++ b/src/components/OpenedFiles/OpenedFiles.scss
@@ -3,6 +3,7 @@
 .openedFiles {
     width: 100%;
     height: 3.8vh;
+    min-height: 3.8vh;
     background-color: $background-dark;
     border-bottom: 1px solid $border-dark;
     display: flex;
@@ -31,6 +32,13 @@
         }
 
         button {
+            // background-color: #fff;
+            // width: 0.52vw;
+            // height: 0.52vw;
+            // min-height: 7px;
+            // min-width: 7px;
+            // border-radius: 500px;
+
             width: fit-content;
             height: fit-content;
             border: none;
@@ -38,6 +46,21 @@
 
             &:hover {
                 background-color: transparent;
+            }
+        }
+
+        .save {
+            background-color: #fff;
+            width: 0.52vw;
+            height: 0.52vw;
+            min-height: 7px;
+            min-width: 7px;
+            border-radius: 500px;
+            padding: 0;
+            margin-left: 0.52vw;
+
+            &:hover {
+                background-color: #fff;
             }
         }
     }
