--- a/SimpleLang/syntax/syntax.scss
+++ b/SimpleLang/syntax/syntax.scss
@@ -1,10 +1,11 @@
-$keyword: #5F9FFF;
-$function: #FFDE67;
-$statements: #D8A0DF;
-$string: #EC9B6C;
-$number: #CAFFB8;
-$variable: #A7DFFF;
-$operators-semicolon: #E4E4E4;
-$brackets: #7A7EA0;
-$parameter: #5B5D6F;
-$comment: #007D23;
+$keyword: #3F88C5; //done
+$function: #FFDE67; //done
+$statements: #CF83D9; //done
+$string: #EC9B6C; //done
+$number: #CAFFB8; //done
+$variable: #A7DFFF; //done
+$operators-semicolon: #E4E4E4; //done
+$brackets: #7A7EA0; //done
+$parameter: #5B5D6F; //done
+$comment: #007D23; //done
+$structName: #4EC9B0;
