--- a/src/components/SideBar/SideBar.scss
+++ b/src/components/SideBar/SideBar.scss
@@ -44,3 +44,21 @@
         }
     }
 }
+
+.fileInFolder {
+    width: 100%;
+    padding: 0 7.7% 0 15% !important;
+    height: 2.9vh;
+    background-color: transparent;
+    border: none;
+    margin-bottom: 1px;
+    color: $header-font-dark;
+    font-size: 1.04vw;
+    font-weight: 300;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 0.78125vw;
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
