Small update, added README

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -4,6 +4,7 @@
     width: 98.44vw;
     // height: 3.37vh;
     height: 2.9vh;
+    // height: 3.3vh;
     // min-height: 25px;
     // min-height: 20px;
     padding: 0 0.78125vw;
