--- a/src/components/Codespace/Codespace.scss
+++ b/src/components/Codespace/Codespace.scss
@@ -2,59 +2,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
 @import '../../../SimpleLang/syntax/syntax.scss';
 
-// .codespace {
-//     width: 100%;
-//     height: 100%;
-//     // max-height: 66.65vh;
-//     padding: 1.44vh 0 0 1vw;
-//     display: flex;
-//     flex-direction: row;
-//     overflow-y: auto;
-//     overflow-x: hidden;
-
-//     .file_space {
-//         width: 85vw;
-//         height: 80vh;
-//         opacity: 0;
-//         position: absolute;
-//     }
-
-//     .line-numbers {
-//         font-family: "Roboto", "Inter", sans-serif;
-//         height: 91vh;
-//         display: flex;
-//         flex-direction: column;
-//         align-items: flex-end;
-//         margin-right: 1vw;
-//         // font-size: 1.04vw;
-//         font-weight: 300;
-//         color: #AFAFAF;
-//         // line-height: 1.6;
-
-//         span {
-//             display: block;
-//             // height: 1.6em;
-//         }
-//     }
-
-//     .textarea {
-//         font-family: "Consolas", "Readex Pro", sans-serif;
-//         width: 85vw;
-//         resize: none;
-//         background-color: transparent;
-//         border: none;
-//         color: white;
-//         // font-size: 1.04vw;
-//         font-weight: 400;
-//         // line-height: 1.6;
-//         // overflow-x: auto;
-
-//         .keyword {
-//             color: $keyword;
-//         }
-//     }
-// }
-
 
 .codespace {
     width: 100%;
@@ -64,6 +11,21 @@
     flex-direction: row;
     overflow-y: auto;
     overflow-x: hidden;
+
+    .title_div {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        h1 {
+            color: white;
+            font-weight: 500;
+            text-align: center;
+            
+        }
+    }
 
     p {
         font-size: 20px;
@@ -77,14 +39,14 @@
         flex-direction: column;
         align-items: flex-end;
         margin-right: 1vw;
-        // font-size: 1.04vw;
+        font-size: 1.04vw;
         font-weight: 300;
         color: #AFAFAF;
-        // line-height: 1.6;
+        line-height: 1.6;
 
         span {
             display: block;
-            // height: 1.6em;
+            height: 1.6em;
         }
     }
 
@@ -95,8 +57,8 @@
 
         pre {
             font-family: "Roboto", "Inter", sans-serif;
-            // font-size: 1.04vw;
-            // line-height: 1.6;
+            font-size: 1.04vw;
+            line-height: 1.6;
             margin: 0;
             padding: 0;
             width: 100%;
@@ -151,7 +113,7 @@
                 color: $variable
             }
 
-            .struct-name {
+            .struct-name, .struct {
                 color: $structName
             }
         }
@@ -168,9 +130,9 @@
             color: transparent;
             caret-color: white;
             resize: none;
-            // font-size: 1.04vw;
+            font-size: 1.04vw;
             font-weight: 400;
-            // line-height: 1.6;
+            line-height: 1.6;
             z-index: 1;
             overflow: hidden;
         }
