--- a/src/components/Search/Search.scss
+++ b/src/components/Search/Search.scss
@@ -1,12 +1,9 @@
 @import '../../styles/main.scss';
 
 .search {
-    // width: 32.3vw;
     width: 31.78vw;
-    // height: 19vh;
     height: 18vh;
     padding: 0.5vh 0.26vw;
-    // left: 40.4%;
     left: 36.2%;
     top: 3.3%;
     position: absolute;
@@ -18,6 +15,21 @@
     box-shadow: 4px 4px rgba(0, 0, 0, 25%);
     border: 1px solid $border-dark;
     background-color: $codespace-dark;
+    z-index: 9999;
+
+
+    .search_title {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        p {
+            color: $header-font-dark;
+            font-size: 1.2vw;
+        }
+    }
 
     button {
         width: 100%;
