--- a/src/components/SideBar/SideBar.scss
+++ b/src/components/SideBar/SideBar.scss
@@ -37,6 +37,16 @@
             background-color: #222222;
         }
 
+        p {
+            width: 100%;
+            height: 100%;
+            max-height: 2.9vh;
+            text-overflow: ellipsis;
+            overflow: hidden;
+            white-space: nowrap;
+            text-align: start;
+        }
+
         div {
             width: 1.45vw;
             height: 1.45vw;
