--- a/src/components/Terminal/Terminal.scss
+++ b/src/components/Terminal/Terminal.scss
@@ -3,6 +3,7 @@
 .terminal {
     width: 100%;
     height: 20vh;
+    // bottom: 0;
     min-height: 20vh;
     border-top: 1px solid $border-dark;
     background-color: $background-dark;
@@ -41,5 +42,6 @@
         margin-top: 1vh;
         color: #00DC09;
         font-size: 1vw;
+        // overflow-y: auto;
     }
 }
