--- a/src/components/Codespace/Codespace.scss
+++ b/src/components/Codespace/Codespace.scss
@@ -26,6 +26,7 @@
             font-size: 18vw;
             text-shadow: 7px 1px 30px rgb(10, 10, 10);
             user-select: none;
+            opacity: 30%;
         }
 
         h2 {
