--- a/src/components/OpenedFiles/OpenedFiles.scss
+++ b/src/components/OpenedFiles/OpenedFiles.scss
@@ -51,7 +51,7 @@
             background-color: $codespace-dark;
         }
 
-        button {
+        div {
             width: fit-content;
             height: fit-content;
             border: none;
